test: use Java 8 compatible file reading